--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <title>Thing Picker</title>
     </head>
     <body>
-        
+        <header>
+            <h1>
+                Thing Picker
+            </h1>
+        </header>
     </body>
 </html>
