--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <h1 class="text-center">
+            <h1 class="text-center pt-3 fw-light">
                 Thing Picker
             </h1>
         </header>
