added and linked js file

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
                 Thing Picker
             </h1>
         </header>
+        <script src="assets/JS/script.js"></script>
     </body>
 </html>
