--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
                 Thing Picker
             </h1>
         </header>
+        <!-- thing input, add button, and pick button -->
+        <div>
+            <!-- thing input -->
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="thing"> 
+            </div>
+        </div>
         <script src="assets/JS/script.js"></script>
     </body>
 </html>
