styled first input

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             </h1>
         </header>
         <!-- thing input, add button, and pick button -->
-        <div>
-            <!-- thing input -->
+        <div id="form">
+            <!-- thing input 1 -->
             <div class="input-group mb-3">
                 <input type="text" class="form-control" placeholder="thing"> 
             </div>
