--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
             <div class="input-group mb-3">
                 <input type="text" class="form-control" placeholder="thing"> 
             </div>
+            <!-- thing input 1 -->
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="thing"> 
+            </div>
+            <!-- buttons -->
+            <div>
+                <button type="button" class="btn btn-secondary btn-sm">Add Thing</button>
+                <button type="button" class="btn btn-secondary btn-sm">Pick</button>
+            </div>
         </div>
         <script src="assets/JS/script.js"></script>
     </body>
