--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <input type="text" class="form-control" placeholder="thing"> 
             </div>
             <!-- buttons -->
-            <div>
-                <button type="button" class="btn btn-secondary btn-sm">Add Thing</button>
-                <button type="button" class="btn btn-secondary btn-sm">Pick</button>
+            <div id="buttons">
+                <button type="button" class="btn btn-secondary btn-sm me-1">Add Thing</button>
+                <button type="button" class="btn btn-secondary btn-sm ms-1">Pick</button>
             </div>
         </div>
         <script src="assets/JS/script.js"></script>
