added event listeners to buttons

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             </div>
             <!-- buttons -->
             <div id="buttons">
-                <button type="button" class="btn btn-secondary btn-sm me-1">Add Thing</button>
-                <button type="button" class="btn btn-secondary btn-sm ms-1">Pick</button>
+                <button id="add-thing-button" type="button" class="btn btn-secondary btn-sm me-1">Add Thing</button>
+                <button id="pick-button" type="button" class="btn btn-secondary btn-sm ms-1">Pick</button>
             </div>
         </div>
         <script src="assets/JS/script.js"></script>
