--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
         <div id="form">
             <!-- thing input 1 -->
             <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="thing"> 
+                <input type="text" class="form-control" id="option-one" placeholder="thing"> 
             </div>
             <!-- thing input 1 -->
             <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="thing"> 
+                <input type="text" class="form-control" id="option-two"  placeholder="thing"> 
             </div>
             <!-- buttons -->
             <div id="buttons">
                 <button id="add-thing-button" type="button" class="btn btn-secondary btn-sm me-1">Add Thing</button>
-                <button id="pick-button" type="button" class="btn btn-secondary btn-sm ms-1">Pick</button>
+                <button id="pick-button" type="submit" class="btn btn-secondary btn-sm ms-1">Pick</button>
             </div>
         </div>
         <script src="assets/JS/script.js"></script>
