added styling to extra form lines

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </h1>
         </header>
         <!-- thing input, add button, and pick button -->
-        <div id="form">
+        <div class="form">
             <!-- thing input 1 -->
             <div class="input-group mb-3">
                 <input type="text" class="form-control" id="option-one" placeholder="thing"> 
