inputs are added above buttons

--- a/index.html
+++ b/index.html
@@ -15,14 +15,22 @@
         </header>
         <!-- thing input, add button, and pick button -->
         <div class="form">
+
             <!-- thing input 1 -->
             <div class="input-group mb-3">
                 <input type="text" class="form-control" id="option-one" placeholder="thing"> 
             </div>
+
             <!-- thing input 1 -->
             <div class="input-group mb-3">
                 <input type="text" class="form-control" id="option-two"  placeholder="thing"> 
             </div>
+
+            <div id="add-input">
+
+            </div>
+
+
             <!-- buttons -->
             <div id="buttons">
                 <button id="add-thing-button" type="button" class="btn btn-secondary btn-sm me-1">Add Thing</button>
