added styling for even spacing on new inputs

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <input type="text" class="form-control" id="option-two"  placeholder="thing"> 
             </div>
 
-            <div id="add-input">
+            <div id="add-input" class="mb-3">
 
             </div>
 
