updated comments in HTML

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
                 <input type="text" class="form-control" id="option-one" placeholder="thing"> 
             </div>
 
-            <!-- thing input 1 -->
+            <!-- thing input 2 -->
             <div class="input-group mb-3">
                 <input type="text" class="form-control" id="option-two"  placeholder="thing"> 
             </div>
 
+            <!-- where added inputs go -->
             <div id="add-input" class="mb-3">
 
             </div>
