replaced response area with hard coded div and inner html being added

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                 <button id="add-thing-button" type="button" class="btn btn-secondary btn-sm me-1">Add Thing</button>
                 <button id="pick-button" type="submit" class="btn btn-secondary btn-sm ms-1">Pick</button>
             </div>
+
+            <!-- result -->
+            <div class="response">
+
+            </div>
         </div>
         <script src="assets/JS/script.js"></script>
     </body>
