updated arr to be global so it can be added to, changed id of things to be numeric

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
             <!-- thing input 1 -->
             <div class="input-group mb-3">
-                <input type="text" class="form-control" id="option-one" placeholder="thing"> 
+                <input type="text" class="form-control thing" id="option-1" placeholder="thing"> 
             </div>
 
             <!-- thing input 2 -->
             <div class="input-group mb-3">
-                <input type="text" class="form-control" id="option-two"  placeholder="thing"> 
+                <input type="text" class="form-control thing" id="option-2"  placeholder="thing"> 
             </div>
 
             <!-- where added inputs go -->
